[gd_scene load_steps=7 format=3 uid="uid://degr1eph1luvr"]

[ext_resource type="Script" path="res://scenes/puzzles/shredder_puzzle.gd" id="1_88jm6"]
[ext_resource type="PackedScene" uid="uid://bkmqw60fdci2u" path="res://scenes/puzzles/paper_piece.tscn" id="1_g6b6l"]
[ext_resource type="Script" path="res://scenes/puzzles/slots.gd" id="2_x6je0"]
[ext_resource type="Texture2D" uid="uid://c01ochcmqth5j" path="res://art_assets/office_art.png" id="3_2utik"]
[ext_resource type="Texture2D" uid="uid://70ywyetcscus" path="res://art_assets/word_puzzle.png" id="3_rdw7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmkey"]
size = Vector2(114, 170.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_88jm6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 512.0
offset_bottom = 255.0
mouse_filter = 2

[node name="Slot1" type="Area2D" parent="."]
position = Vector2(18, 21)
script = ExtResource("2_x6je0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot1"]
position = Vector2(60, 90)
shape = SubResource("RectangleShape2D_kmkey")

[node name="Sprite2D" type="Sprite2D" parent="Slot1"]
position = Vector2(60, 90)
scale = Vector2(6.34375, 4.70312)
texture = ExtResource("3_2utik")
region_enabled = true
region_rect = Rect2(48.3274, -1.26043, 16.3649, 32.5782)

[node name="Slot2" type="Area2D" parent="."]
position = Vector2(348, 23)
script = ExtResource("2_x6je0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot2"]
position = Vector2(-156, 87)
shape = SubResource("RectangleShape2D_kmkey")

[node name="Sprite2D" type="Sprite2D" parent="Slot2"]
position = Vector2(-160, 87)
scale = Vector2(6.34375, 4.70312)
texture = ExtResource("3_2utik")
region_enabled = true
region_rect = Rect2(48.3274, -1.26043, 16.3649, 32.5782)

[node name="Slot3" type="Area2D" parent="."]
position = Vector2(387, 23)
script = ExtResource("2_x6je0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot3"]
position = Vector2(-81, 87)
shape = SubResource("RectangleShape2D_kmkey")

[node name="Sprite2D" type="Sprite2D" parent="Slot3"]
position = Vector2(-81, 88)
scale = Vector2(6.34375, 4.70312)
texture = ExtResource("3_2utik")
region_enabled = true
region_rect = Rect2(48.3274, -1.26043, 16.3649, 32.5782)

[node name="Slot4" type="Area2D" parent="."]
position = Vector2(426, 23)
script = ExtResource("2_x6je0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot4"]
position = Vector2(-6, 86)
shape = SubResource("RectangleShape2D_kmkey")

[node name="Sprite2D" type="Sprite2D" parent="Slot4"]
position = Vector2(-10, 89)
scale = Vector2(6.34375, 4.70312)
texture = ExtResource("3_2utik")
region_enabled = true
region_rect = Rect2(48.3274, -1.26043, 16.3649, 32.5782)

[node name="paperPiece1" parent="." instance=ExtResource("1_g6b6l")]
position = Vector2(61, 87)

[node name="Sprite2D" type="Sprite2D" parent="paperPiece1"]
position = Vector2(19.0625, 21.5)
scale = Vector2(1.99643, 1.46875)
texture = ExtResource("3_rdw7a")
region_enabled = true
region_rect = Rect2(0, 0, 35, 96)

[node name="paperPiece2" parent="." instance=ExtResource("1_g6b6l")]
position = Vector2(141, 170)

[node name="Sprite2D" type="Sprite2D" parent="paperPiece2"]
position = Vector2(20.5, 22.5)
scale = Vector2(1.97222, 1.46875)
texture = ExtResource("3_rdw7a")
region_enabled = true
region_rect = Rect2(48, 0, 36, 96)

[node name="paperPiece3" parent="." instance=ExtResource("1_g6b6l")]
position = Vector2(240, 126)

[node name="Sprite2D" type="Sprite2D" parent="paperPiece3"]
position = Vector2(18.5, 22.5)
scale = Vector2(1.825, 1.46875)
texture = ExtResource("3_rdw7a")
region_enabled = true
region_rect = Rect2(96, 0, 40, 96)

[node name="paperPiece4" parent="." instance=ExtResource("1_g6b6l")]
position = Vector2(279, 213)

[node name="Sprite2D" type="Sprite2D" parent="paperPiece4"]
position = Vector2(18, 22)
scale = Vector2(2.05882, 1.45833)
texture = ExtResource("3_rdw7a")
region_enabled = true
region_rect = Rect2(144, 0, 34, 96)

[connection signal="area_entered" from="Slot1" to="Slot1" method="_on_area_entered"]
[connection signal="area_entered" from="Slot1" to="paperPiece1" method="_on_slot_1_area_entered"]
[connection signal="area_exited" from="Slot1" to="Slot1" method="_on_area_exited"]
[connection signal="area_entered" from="Slot2" to="Slot2" method="_on_area_entered"]
[connection signal="area_entered" from="Slot2" to="paperPiece1" method="_on_slot_1_area_entered"]
[connection signal="area_exited" from="Slot2" to="Slot2" method="_on_area_exited"]
[connection signal="area_entered" from="Slot3" to="Slot3" method="_on_area_entered"]
[connection signal="area_entered" from="Slot3" to="paperPiece1" method="_on_slot_1_area_entered"]
[connection signal="area_exited" from="Slot3" to="Slot3" method="_on_area_exited"]
[connection signal="area_entered" from="Slot4" to="Slot4" method="_on_area_entered"]
[connection signal="area_entered" from="Slot4" to="paperPiece1" method="_on_slot_1_area_entered"]
[connection signal="area_exited" from="Slot4" to="Slot4" method="_on_area_exited"]
